[gd_scene load_steps=4 format=3 uid="uid://cosu5vsxrdm8m"]

[ext_resource type="Texture2D" uid="uid://2txk0cqh3xi4" path="res://Assets/ui/woodborderbox.png" id="1_woodborder"]
[ext_resource type="Script" uid="uid://4sj0k0op48ok" path="res://Dialogue/dialogue_manager.gd" id="2_dialogue_manager"]
[ext_resource type="Script" uid="uid://7sarqbuprm5t" path="res://Dialogue/dialogue_ui.gd" id="3_dialogue_ui"]

[node name="Root" type="NinePatchRect"]
offset_top = 1.0
offset_right = 574.0
offset_bottom = 286.0
texture = ExtResource("1_woodborder")
script = ExtResource("2_dialogue_manager")

[node name="LightBox" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -157.0
offset_top = -83.0
offset_right = 1343.0
offset_bottom = 717.0
color = Color(0, 0, 0, 0.294118)

[node name="DialogueUI" type="Control" parent="."]
anchors_preset = 0
offset_left = 26.0
offset_top = 10.0
offset_right = 248.0
offset_bottom = 135.0
script = ExtResource("3_dialogue_ui")

[node name="CharacterName" type="Label" parent="DialogueUI"]
layout_mode = 0
offset_left = 45.0
offset_top = 173.0
offset_right = 245.0
offset_bottom = 196.0
text = "Character Name"
horizontal_alignment = 1

[node name="CharacterPortrait" type="TextureRect" parent="DialogueUI"]
layout_mode = 0
offset_left = 93.0
offset_top = 67.0
offset_right = 192.0
offset_bottom = 149.0

[node name="DialogueText" type="Label" parent="DialogueUI"]
layout_mode = 0
offset_left = 218.0
offset_top = 70.0
offset_right = 358.0
offset_bottom = 120.0
text = "Dialogue text goes here..."
vertical_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="DialogueUI"]
layout_mode = 0
offset_left = 342.0
offset_top = 161.0
offset_right = 422.0
offset_bottom = 192.0
text = "Continue"
